# dlib-build

./: README.md
app/: CMakeLists.txt  CMakeLists_a.txt  build.gradle
app/src/androidTest/java/com/leo/face/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/leo/face/myapplication/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/leo/face/myapplication/: ExampleUnitTest.kt
